--- a/project.html
+++ b/project.html
@@ -8,10 +8,7 @@
   <body></body>
 
   <head>
-    <link
-      rel="stylesheet"
-      href="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/styles.css"
-    />
+    <link rel="stylesheet" href="styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Albert+Sans:wght@400;500&family=Archivo+Black&display=swap"
       rel="stylesheet"
@@ -19,12 +16,12 @@
   </head>
 
   <header class="menu">
+    <a onclick="history.go(-1)" class="back-button">
+      <img src="assets/arrow-left.svg" alt="BACK" />
+      <p style="color: #4363a7">BACK</p>
+    </a>
     <a href="index.html">
-      <img
-        class="logo"
-        src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/MOU - logo-01.svg"
-        alt="Logo"
-      />
+      <img class="logo" src="assets/MOU - logo-01.svg" alt="Logo" />
     </a>
   </header>
 
@@ -50,11 +47,7 @@
         <div class="arrow-right"></div>
       </div>
     </div>
-    <img
-      class="project-image"
-      src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/mockups/1.png"
-      alt="Project Image"
-    />
+    <img class="project-image" src="assets/mockups/1.png" alt="Project Image" />
   </section>
 
   <section class="text-content-section">
@@ -102,19 +95,12 @@
   <section>
     <div class="footer">
       <div class="wrapper">
-        <img
-          class="footer-logo"
-          src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/MOU - logo-02.svg"
-        />
+        <img class="footer-logo" src="assets/MOU - logo-02.svg" />
       </div>
       <div class="wrapper">
         <h2 style="color: #f9f8ee">CONTACT ME</h2>
         <div class="contact-item">
-          <img
-            src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/mail.svg"
-            class="icon"
-            alt="Email Icon"
-          />
+          <img src="assets/mail.svg" class="icon" alt="Email Icon" />
           <a
             href="mailto:matildaullbrandt@gmail.com"
             style="text-decoration: underline; color: #f9f8ee"
@@ -122,11 +108,7 @@
           >
         </div>
         <div class="contact-item">
-          <img
-            src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/phone.svg"
-            class="icon"
-            alt="Phone Icon"
-          />
+          <img src="assets/phone.svg" class="icon" alt="Phone Icon" />
           <a
             href="tel:+46709256083"
             style="text-decoration: underline; color: #f9f8ee"
@@ -137,11 +119,7 @@
       <div class="wrapper">
         <h2 style="color: #f9f8ee">SOCIAL MEDIA</h2>
         <div class="contact-item">
-          <img
-            src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/linkedin.svg"
-            class="icon"
-            alt="linkedin Icon"
-          />
+          <img src="assets/linkedin.svg" class="icon" alt="linkedin Icon" />
           <a
             href="https://www.linkedin.com/in/matilda-ullbrandt-57b48b1bb/"
             style="text-decoration: underline; color: #f9f8ee"
@@ -150,7 +128,7 @@
         </div>
         <div class="contact-item">
           <img
-            src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/instagram.svg"
+            src="assets/instagram.svg"
             class="icon"
             alt="Instagram Icon"
             style="text-decoration: underline; color: #f9f8ee"
