--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
   <head>
     <link
       rel="stylesheet"
-      href="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/styles.css"
+      href="styles.css"
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Albert+Sans:wght@400;500&family=Archivo+Black&display=swap"
@@ -19,12 +19,16 @@
   </head>
 
   <header class="menu">
+    <a onclick="history.go(-1)" class="back-button">
+      <img src="assets/arrow-left.svg" alt="BACK">
+      <p style="color: #4363a7">BACK</p>
+    </a>
     <a href="index.html">
-    <img
+      <img
       class="logo"
-      src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/MOU - logo-01.svg"
+      src="assets/MOU - logo-01.svg"
       alt="Logo"
-    />
+      />
     </a>
   </header>
 
@@ -52,7 +56,7 @@
     </div>
     <img
       class="project-image"
-      src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/mockups/1.png"
+      src="assets/mockups/1.png"
       alt="Project Image"
     />
   </section>
@@ -60,7 +64,7 @@
   <section class="content-section-left">
     <img
       class="project-image"
-      src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/mockups/2.png"
+      src="assets/mockups/2.png"
       alt="Project Image"
     />
     <div class="about-content">
@@ -99,7 +103,7 @@
     </div>
     <img
       class="project-image"
-      src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/mockups/1.png"
+      src="assets/mockups/1.png"
       alt="Project Image"
     />
   </section>
@@ -107,7 +111,7 @@
   <section class="content-section-left">
     <img
       class="project-image"
-      src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/mockups/2.png"
+      src="assets/mockups/2.png"
       alt="Project Image"
     />
     <div class="about-content">
@@ -148,7 +152,7 @@
     </div>
     <img
       class="project-image"
-      src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/mockups/1.png"
+      src="assets/mockups/1.png"
       alt="Project Image"
     />
   </section>
@@ -158,14 +162,14 @@
       <div class="wrapper">
         <img
           class="footer-logo"
-          src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/MOU - logo-02.svg"
+          src="assets/MOU - logo-02.svg"
         />
       </div>
       <div class="wrapper">
         <h2 style="color: #f9f8ee">CONTACT ME</h2>
         <div class="contact-item">
           <img
-            src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/mail.svg"
+            src="assets/mail.svg"
             class="icon"
             alt="Email Icon"
           />
@@ -177,7 +181,7 @@
         </div>
         <div class="contact-item">
           <img
-            src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/phone.svg"
+            src="assets/phone.svg"
             class="icon"
             alt="Phone Icon"
           />
@@ -192,7 +196,7 @@
         <h2 style="color: #f9f8ee">SOCIAL MEDIA</h2>
         <div class="contact-item">
           <img
-            src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/linkedin.svg"
+            src="assets/linkedin.svg"
             class="icon"
             alt="linkedin Icon"
           />
@@ -204,7 +208,7 @@
         </div>
         <div class="contact-item">
           <img
-            src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/instagram.svg"
+            src="assets/instagram.svg"
             class="icon"
             alt="Instagram Icon"
             style="text-decoration: underline; color: #f9f8ee"
