--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <head>
     <link
       rel="stylesheet"
-      href="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/styles.css"
+      href="styles.css"
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Albert+Sans:wght@400;500&family=Archivo+Black&display=swap"
@@ -19,12 +19,16 @@
   </head>
 
   <header class="menu">
+    <a onclick="history.go(-1)" class="back-button">
+      <img src="assets/arrow-left.svg" alt="BACK">
+      <p style="color: #4363a7">BACK</p>
+    </a>
     <a href="index.html">
-    <img
+      <img
       class="logo"
-      src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/MOU - logo-01.svg"
+      src="assets/MOU - logo-01.svg"
       alt="Logo"
-    />
+      />
     </a>
   </header>
 
@@ -36,7 +40,7 @@
   <section class="center-content-section">
     <img
       class="content-image"
-      src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/matilda-beach.webp"
+      src="assets/matilda-beach.webp"
       alt="Content Image"
     />
     <div class="text-header">
@@ -58,7 +62,7 @@
   <section class="content-section-left">
     <img
       class="profile-image"
-      src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/matildas-04.png"
+      src="assets/matildas-04.png"
       alt="Profile Image"
     />
     <div class="about-content" id="About me">
@@ -72,7 +76,7 @@
         adipiscing elit. Lorem ipsum dolor sit amet consectetur adipiscing elit.
       </p>
       <div class="button-secondary">
-        <a href="#Contact me" class="button-text" style="color: #1f1f1f;">Contact me</a>
+        <a href="mailto:matildaullbrandt@gmail.com" class="button-text" style="color: #1f1f1f;">Contact me</a>
       </div>
     </div>
   </section>
@@ -97,7 +101,7 @@
     </div>
     <img
       class="profile-image"
-      src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/painting-matilda.png"
+      src="assets/painting-matilda.png"
       alt="Profile Image"
     />
   </section>
@@ -123,7 +127,7 @@
   <section class="content-section-left">
     <img
       class="profile-image"
-      src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/matilda-beach.webp"
+      src="assets/matilda-beach.webp"
       alt="Profile Image"
     />
     <div class="about-content" id="Contact me">
@@ -131,7 +135,7 @@
         <h2 style="color: #f9f8ee;padding-bottom: 1rem">CONTACT ME</h2>
         <div class="contact-item">
           <img
-            src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/mail.svg"
+            src="assets/mail.svg"
             class="icon"
             alt="Email Icon"
             style="padding-bottom: 1rem"
@@ -144,7 +148,7 @@
         </div>
         <div class="contact-item">
           <img
-            src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/phone.svg"
+            src="assets/phone.svg"
             class="icon"
             alt="Phone Icon"
             style="padding-bottom: 2rem"
@@ -158,7 +162,7 @@
         <h2 style="color: #f9f8ee;padding-bottom: 1rem">SOCIAL MEDIA</h2>
         <div class="contact-item">
           <img
-            src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/linkedin.svg"
+            src="assets/linkedin.svg"
             class="icon"
             alt="linkedin Icon"
             style="text-decoration: underline; color: #f9f8ee; padding-bottom: 1rem"
@@ -172,7 +176,7 @@
         </div>
         <div class="contact-item">
           <img
-            src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/instagram.svg"
+            src="assets/instagram.svg"
             class="icon"
             alt="Instagram Icon"
             style="text-decoration: underline; color: #f9f8ee"
@@ -193,73 +197,73 @@
     <div class="image-grid">
       <div class="image-banner">
         <img
-          src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/image-grid/matilda-party.webp"
+          src="assets/image-grid/matilda-party.webp"
           alt="Image 1"
         />
       </div>
       <div class="image-banner">
         <img
-          src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/image-grid/matilda-concert.webp"
+          src="assets/image-grid/matilda-concert.webp"
           alt="Image 2"
         />
      </div>
       <div class="image-banner">
         <img
-          src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/image-grid/matilda-surf.webp"
+          src="assets/image-grid/matilda-surf.webp"
           alt="Image 3"
         />
       </div>
       <div class="image-banner">
         <img
-          src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/image-grid/matilda-andreas-sf.webp"
+          src="assets/image-grid/matilda-andreas-sf.webp"
           alt="Image 4"
         />
       </div>
       <div class="image-banner">
        <img
-          src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/image-grid/matilda-norrland-1.webp"
+          src="assets/image-grid/matilda-norrland-1.webp"
          alt="Image 5"
        />
       </div>
       <div class="image-banner">
         <img
-          src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/image-grid/matilda-food.webp"
+          src="assets/image-grid/matilda-food.webp"
           alt="Image 6"
        />
       </div>
       <div class="image-banner">
         <img
-          src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/image-grid/matilda-food-malin.webp"
+          src="assets/image-grid/matilda-food-malin.webp"
           alt="Image 7"
         />
       </div>
       <div class="image-banner">
         <img
-          src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/image-grid/matilda-norrland-2.webp"
+          src="assets/image-grid/matilda-norrland-2.webp"
           alt="image 8"
         />
       </div>
       <div class="image-banner">
         <img
-          src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/image-grid/matilda-painting.webp"
+          src="assets/image-grid/matilda-painting.webp"
           alt="Image 9"
         />
       </div>
       <div class="image-banner">
        <img
-          src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/image-grid/matilda-beach.webp"
+          src="assets/image-grid/matilda-beach.webp"
           alt="Image 10"
         />
       </div>
       <div class="image-banner">
         <img
-          src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/image-grid/matilda-andreas.webp"
+          src="assets/image-grid/matilda-andreas.webp"
           alt="Image 11"
         />
       </div>
       <div class="image-banner">
        <img
-          src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/image-grid/matilda-skiing.webp"
+          src="assets/image-grid/matilda-skiing.webp"
           alt="Image 12"
        />
       </div>
@@ -271,14 +275,14 @@
     <div class="wrapper">
     <img
       class="footer-logo"
-      src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/MOU - logo-02.svg"
+      src="assets/MOU - logo-02.svg"
     />
     </div>
     <div class="wrapper">
       <h2 style="color: #f9f8ee">CONTACT ME</h2>
       <div class="contact-item">
         <img
-          src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/mail.svg"
+          src="assets/mail.svg"
           class="icon"
           alt="Email Icon"
         />
@@ -290,7 +294,7 @@
         </div>
         <div class="contact-item">
           <img
-            src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/phone.svg"
+            src="assets/phone.svg"
             class="icon"
             alt="Phone Icon"
           />
@@ -305,7 +309,7 @@
       <h2 style="color: #f9f8ee">SOCIAL MEDIA</h2>
       <div class="contact-item">
         <img
-          src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/linkedin.svg"
+          src="assets/linkedin.svg"
           class="icon"
           alt="linkedin Icon"
         />
@@ -317,7 +321,7 @@
       </div>
       <div class="contact-item">
         <img
-          src="/Users/matilda/Downloads/DD/Frontendutveckling/portfolio_matilda_ullbrandt_dd24/assets/instagram.svg"
+          src="assets/instagram.svg"
           class="icon"
           alt="Instagram Icon"
           style="text-decoration: underline; color: #f9f8ee"
