--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <header class="menu">
     <a onclick="history.go(-1)" class="back-button">
       <img src="assets/arrow-left.svg" alt="BACK">
-      <p style="color: #4363a7">BACK</p>
+      <p style="color: #4363a7; font-weight: bold;">BACK</p>
     </a>
     <a href="index.html">
       <img
