--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
       <img src="assets/arrow-left.svg" alt="BACK">
       <p style="color: #4363a7; font-weight: bold;">BACK</p>
     </a>
+    <a href="index.html" class="home-button">
+      <p style="color: #4363a7; font-weight: bold">HOME</p>
+      <img src="assets/home-button.svg" alt="HOME" />
+    </a>
     <a href="index.html">
       <img
       class="logo"
@@ -44,11 +48,7 @@
       alt="Content Image"
     />
     <div class="text-header">
-      Lorem ipsum dolor sit amet consectetur adipiscing elit, hac gravida
-      suscipit placerat proin sed ligula integer, ad consequat donec massa
-      hendrerit id. Molestie fames habitant sociosqu tristique quis mollis
-      libero sodales hac luctus, nam dictumst neque facilisis eu integer purus
-      cum donec etiam cubilia.
+      As a digital designer, I blend creativity with functionality to craft engaging user experiences. With expertise in UX/UI, web design, motion graphics, 3D, and illustration, I strive to create visually captivating and intuitive designs that make a lasting impact.
     </div>
   </section>
 
@@ -68,12 +68,7 @@
     <div class="about-content" id="About me">
       <h3>About me</h3>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipiscing elit, hac gravida
-        suscipit placerat proin sed ligula integer, ad consequat donec massa
-        hendrerit id. Molestie fames habitant sociosqu tristique quis mollis
-        libero sodales hac luctus, nam dictumst neque facilisis eu integer purus
-        cum donec etiam cubilia. Lorem ipsum dolor sit amet consectetur
-        adipiscing elit. Lorem ipsum dolor sit amet consectetur adipiscing elit.
+        I’m Matilda, born and raised in Gothenburg but with three formative years in Borås, where I earned a Bachelor’s degree in Textile Economics. As a freelance consultant in marketing and design, I balance my professional life with a love for creativity in my spare time. Whether it’s traveling, exploring flea markets with friends, or diving into new creative projects.
       </p>
       <div class="button-secondary">
         <a href="mailto:matildaullbrandt@gmail.com" class="button-text" style="color: #1f1f1f;">Contact me</a>
@@ -85,12 +80,7 @@
     <div class="about-content">
       <h3 style="text-align: left">Design to me</h3>
       <p style="color: #1f1f1f">
-        Lorem ipsum dolor sit amet consectetur adipiscing elit, hac gravida
-        suscipit placerat proin sed ligula integer, ad consequat donec massa
-        hendrerit id. Molestie fames habitant sociosqu tristique quis mollis
-        libero sodales hac luctus, nam dictumst neque facilisis eu integer purus
-        cum done33w44wèc etiam cubilia. Lorem ipsum dolor sit amet consectetur
-        adipiscing elit. Lorem ipsum dolor sit amet consectetur adipiscing elit.
+        To me, design is about creating meaningful connections between people and the digital world. It’s a balance of artistry and problem-solving, where every detail has the potential to inspire, guide, and make life a little easier.
       </p>
       <div class="button-primary">
         <a href="projects.html" class="button-text" style="color: #f9f8ee"
