--- a/project.html
+++ b/project.html
@@ -20,6 +20,10 @@
       <img src="assets/arrow-left.svg" alt="BACK" />
       <p style="color: #4363a7; font-weight: bold">BACK</p>
     </a>
+    <a href="index.html" class="home-button">
+      <p style="color: #4363a7; font-weight: bold">HOME</p>
+      <img src="assets/home-button.svg" alt="HOME" />
+    </a>
     <a href="index.html">
       <img class="logo" src="assets/MOU - logo-01.svg" alt="Logo" />
     </a>
@@ -52,43 +56,60 @@
 
   <section class="text-content-section">
     <div class="project-content">
-      <h3 style="height: auto">Design & concept</h3>
+      <h3 style="height: auto">Design</h3>
     </div>
     <div>
       <p style="color: #1f1f1f">
-        I oversee the content and layout for MKMedia's quarterly newsletters,
-        balancing professionalism with a personal touch. Each edition is
-        carefully crafted to reflect our expertise while staying approachable,
-        ensuring that our clients stay informed and engaged.
+        I plan and create the content and layout for mkmedias's quarterly
+        Newsletters.
       </p>
     </div>
   </section>
 
   <section class="text-content-section">
     <div class="project-content">
-      <h3 style="height: auto">implementation</h3>
+      <h3 style="height: auto">Implement</h3>
     </div>
     <div>
       <p style="color: #1f1f1f">
-        I oversee the content and layout for MKMedia's quarterly newsletters,
-        balancing professionalism with a personal touch. Each edition is
-        carefully crafted to reflect our expertise while staying approachable,
-        ensuring that our clients stay informed and engaged.
+        I manage the layout and contact lists in mailchimp. I also ensure that
+        our domain is verified and that the newsletters are sent out in time.
       </p>
     </div>
   </section>
 
   <section class="text-content-section">
     <div class="project-content">
-      <h3 style="height: auto">result</h3>
+      <h3 style="height: auto">Track</h3>
     </div>
     <div>
       <p style="color: #1f1f1f">
-        I oversee the content and layout for MKMedia's quarterly newsletters,
-        balancing professionalism with a personal touch. Each edition is
-        carefully crafted to reflect our expertise while staying approachable,
-        ensuring that our clients stay informed and engaged.
+        I ensure that the send out went well, and follow up the statistics to
+        summarize and present the result of the newsletters.
       </p>
+    </div>
+  </section>
+
+  <section class="content-section-left">
+    <img class="profile-image" src="assets/matilda.webp" alt="Profile Image" />
+    <div class="about-content" id="About me">
+      <h3>Work with me</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipiscing elit, hac gravida
+        suscipit placerat proin sed ligula integer, ad consequat donec massa
+        hendrerit id. Molestie fames habitant sociosqu tristique quis mollis
+        libero sodales hac luctus, nam dictumst neque facilisis eu integer purus
+        cum donec etiam cubilia. Lorem ipsum dolor sit amet consectetur
+        adipiscing elit. Lorem ipsum dolor sit amet consectetur adipiscing elit.
+      </p>
+      <div class="button-secondary">
+        <a
+          href="mailto:matildaullbrandt@gmail.com"
+          class="button-text"
+          style="color: #1f1f1f"
+          >Contact me</a
+        >
+      </div>
     </div>
   </section>
 
