--- a/projects.html
+++ b/projects.html
@@ -23,6 +23,10 @@
       <img src="assets/arrow-left.svg" alt="BACK">
       <p style="color: #4363a7; font-weight: bold;">BACK</p>
     </a>
+    <a href="index.html" class="home-button">
+      <p style="color: #4363a7; font-weight: bold">HOME</p>
+      <img src="assets/home-button.svg" alt="HOME" />
+    </a>
     <a href="index.html">
       <img
       class="logo"
