--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <section class="center-content-section">
     <img
       class="content-image"
-      src="assets/matilda-beach.webp"
+      src="assets/header1.png"
       alt="Content Image"
     />
     <div class="text-header">
