--- a/projects.html
+++ b/projects.html
@@ -68,7 +68,7 @@
   <section class="content-section-left">
     <img
       class="project-image"
-      src="assets/mockups/2.png"
+      src="assets/Aqua_Purity_Roll-up_1438x1587.JPG"
       alt="Project Image"
     />
     <div class="about-content">
@@ -115,7 +115,7 @@
   <section class="content-section-left">
     <img
       class="project-image"
-      src="assets/mockups/2.png"
+      src="assets/SleepWell_instagram_post_1080x1080.png"
       alt="Project Image"
     />
     <div class="about-content">
