--- a/project.html
+++ b/project.html
@@ -89,20 +89,25 @@
     <div class="about-content" id="About me">
       <h3>Work with me</h3>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipiscing elit, hac gravida
-        suscipit placerat proin sed ligula integer, ad consequat donec massa
-        hendrerit id. Molestie fames habitant sociosqu tristique quis mollis
-        libero sodales hac luctus, nam dictumst neque facilisis eu integer purus
-        cum donec etiam cubilia. Lorem ipsum dolor sit amet consectetur
-        adipiscing elit. Lorem ipsum dolor sit amet consectetur adipiscing elit.
+        If you like my work and would like to connect, feel free to reach out!
+        I’d be happy to chat about potential projects or answer any questions.
+        Let's be creative together!
       </p>
-      <div class="button-secondary">
-        <a
-          href="mailto:matildaullbrandt@gmail.com"
-          class="button-text"
-          style="color: #1f1f1f"
-          >Contact me</a
-        >
+      <form>
+        <label for="name">Name:</label>
+        <input type="text" id="name" placeholder="Name" required>
+
+        <label for="email">Email:</label>
+        <input type="email" id="email" placeholder="Email Address" required>
+
+        <label for="message">Message:</label>
+        <textarea id="message" placeholder="Write your message here" required cols="30" rows="10"></textarea>
+
+        <button type="submit" class="button-primary">
+          <a href="project.html" class="button-text" style="color:#f9f8ee;"
+            >Send Message</a>
+        </button>
+      </form>
       </div>
     </div>
   </section>
