--- a/project.html
+++ b/project.html
@@ -93,7 +93,7 @@
         I’d be happy to chat about potential projects or answer any questions.
         Let's be creative together!
       </p>
-      <form>
+      <form class="form">
         <label for="name">Name:</label>
         <input type="text" id="name" placeholder="Name" required>
 
