--- a/project.html
+++ b/project.html
@@ -25,7 +25,7 @@
       <img src="assets/home-button.svg" alt="HOME" />
     </a>
     <a href="index.html">
-      <img class="logo" src="assets/MOU - logo-01.svg" alt="Logo" />
+      <img class="logo" src="assets/MOU - logo.svg" alt="Logo" />
     </a>
   </header>
 
