--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,7 @@
     <a href="index.html">
       <img
       class="logo"
-      src="assets/MOU - logo-01.svg"
+      src="assets/MOU - logo.svg"
       alt="Logo"
       />
     </a>
