--- a/projects.html
+++ b/projects.html
@@ -161,6 +161,34 @@
     />
   </section>
 
+  <section class="content-section-left">
+    <img class="profile-image" src="assets/matilda.webp" alt="Profile Image" />
+    <div class="about-content" id="About me">
+      <h3>Work with me</h3>
+      <p>
+        If you like my work and would like to connect, feel free to reach out!
+        I’d be happy to chat about potential projects or answer any questions.
+        Let's be creative together!
+      </p>
+      <form class="form">
+        <label for="name">Name:</label>
+        <input type="text" id="name" placeholder="Name" required>
+
+        <label for="email">Email:</label>
+        <input type="email" id="email" placeholder="Email Address" required>
+
+        <label for="message">Message:</label>
+        <textarea id="message" placeholder="Write your message here" required cols="30" rows="10"></textarea>
+
+        <button type="submit" class="button-primary">
+          <a href="project.html" class="button-text" style="color:#f9f8ee;"
+            >Send Message</a>
+        </button>
+      </form>
+      </div>
+    </div>
+  </section>
+
   <section>
     <div class="footer">
       <div class="wrapper">
